# rookies-raylib-demo

./: .gitignore  CMakeLists.txt
headers/: dictMain.h  global.h  palette.h  resources.h
headers/components/: TextBox.h
headers/paletteColors/: error.h  neutral.h  primary.h  secondary.h  tertiary.h  utilities.h
src/: dictMain.cpp  main.cpp  resourceLoad.cpp
src/components/: TextBox.cpp
